# coletor_impressora_3d

./: app.html  app.py  collect.py  database.py  mqtt_client.py  pyproject.toml  receive_mqtt.py  sensor.py  serializer.py
routes/: __init__.py  collect.py
static/: chart.js
